@@ -14,8 +14,8 @@
 #ifndef MB_COMMON_H_
 #define MB_COMMON_H_
 
-#include "objmap.h"
-#include "pooled_list.h"
+#include "mb_objmap.h"
+#include "mb_pooled_list.h"
 #include <errno.h>
 #include <assert.h>
 #include <stdlib.h>
