@@ -13,8 +13,8 @@ noinst_LTLIBRARIES  = lib_utils.la lib_utils_d.la
 
 common_sources   = objmap.c pooled_list.c unmap.c \
                     $(INCLUDEDIR)/uthash.h \
-                    $(INCLUDEDIR)/objmap.h \
-                    $(INCLUDEDIR)/pooled_list.h \
+                    $(INCLUDEDIR)/mb_objmap.h \
+                    $(INCLUDEDIR)/mb_pooled_list.h \
                     $(INCLUDEDIR)/mboard.h \
                     $(INCLUDEDIR)/mb_utils.h \
                     $(INCLUDEDIR)/mb_common.h
