@@ -11,6 +11,7 @@
 pooled_list* create_and_populate_pl(int memblock_size, int node_count) {
     
     int i, rc;
+    void *ptr;
     pooled_list *pl;
     my_message_t *new;
     
@@ -24,7 +25,9 @@ pooled_list* create_and_populate_pl(int memblock_size, int node_count) {
     /* add nodes to pl obj */
     for (i = 0; i < node_count; i++)
     {
-        rc = pl_newnode(pl, (void **)&new);
+        rc = pl_newnode(pl, &ptr);
+        new = (my_message_t *)ptr;
+        
         CU_ASSERT_FATAL(rc == PL_SUCCESS); /* quit if addnode failed */
         CU_ASSERT_PTR_NOT_NULL(new);
         
